# confluence-kb

./: .dockerignore  .env.example  .gitignore  Dockerfile.init  README.md  docker-compose.yml  main.py  pyproject.toml
adrs/: 001-confluence-kb-architecture.md
scripts/: create_kafka_topics.py  init_db.py  init_services.sh  run_html_processor.py
src/confluence_kb/: config.py
src/confluence_kb/cli/: export.py
src/confluence_kb/database/: __init__.py  models.py
src/confluence_kb/flink/: html_processor_job.py
src/confluence_kb/kafka/: producer.py
src/confluence_kb/utils/: html_processor.py  markdown_processor.py
